chore: package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish:patch": "npm version patch && npm publish",
+    "publish:minor": "npm version minor && npm publish",
+    "publish:major": "npm version major  && npm publish",
+    "postpublish": "cnpm sync vuepress-theme-uni-app-test"
   },
   "author": "LXH",
   "license": "ISC",
