--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "vuepress-plugin-check-md2",
-  "version": "1.0.4",
-  "description": "",
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
-  "scripts": {
-    "publish:patch": "npm version patch && npm publish",
-    "publish:minor": "npm version minor && npm publish",
-    "publish:major": "npm version major  && npm publish",
-    "postpublish": "cnpm sync vuepress-plugin-check-md2"
-  },
-  "author": "LXH",
-  "license": "ISC",
-  "dependencies": {
-    "@sindresorhus/slugify": "^0.8.0",
-    "chalk": "^2.4.2",
-    "commander": "^2.19.0",
-    "diacritics": "^1.3.0",
-    "globby": "^9.1.0"
-  },
-  "devDependencies": {
-    "autod": "^3.0.1",
-    "coffee": "^5.2.1",
-    "egg-bin": "^4.3.7",
-    "egg-ci": "^1.8.0",
-    "egg-mock": "^3.21.0",
-    "eslint": "^4.18.1",
-    "eslint-config-egg": "^7.0.0",
-    "js2dts": "^0.3.0"
-  }
+	"name": "vuepress-plugin-check-md2",
+	"version": "1.0.4",
+	"description": "",
+	"main": "index.js",
+	"files": [
+		"index.js"
+	],
+	"bugs": {
+		"url": "https://github.com/StrivingRabbit/vuepress-plugin-check-md2/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/StrivingRabbit/vuepress-plugin-check-md2.git"
+	},
+	"scripts": {
+		"publish:patch": "npm version patch && npm publish",
+		"publish:minor": "npm version minor && npm publish",
+		"publish:major": "npm version major  && npm publish",
+		"postpublish": "cnpm sync vuepress-plugin-check-md2"
+	},
+	"author": "LXH",
+	"license": "ISC",
+	"dependencies": {
+		"@sindresorhus/slugify": "^0.8.0",
+		"chalk": "^2.4.2",
+		"commander": "^2.19.0",
+		"diacritics": "^1.3.0",
+		"globby": "^9.1.0"
+	},
+	"devDependencies": {
+		"autod": "^3.0.1",
+		"coffee": "^5.2.1",
+		"egg-bin": "^4.3.7",
+		"egg-ci": "^1.8.0",
+		"egg-mock": "^3.21.0",
+		"eslint": "^4.18.1",
+		"eslint-config-egg": "^7.0.0",
+		"js2dts": "^0.3.0"
+	}
 }
